@@ -8,24 +8,7 @@ Contributors: n00b81, J, arisma, psp-hacks.com, ultimakillz
 Special thanks to: all people who worked on PSPSDK, specially Tyranid for psplink and prxtool, people at ps2dev.org, jas0nuk for prxdecrypter, 
 all psardumper developers.
 
-This license applies if not stated otherwise:
-
-This file is part of Half Byte Loader.
-
-Half Byte Loader is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-Half Byte Loader is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with Half Byte Loader.  If not, see <http://www.gnu.org/licenses/>.
-
-
+The following license applies if not stated otherwise:
 
                     GNU GENERAL PUBLIC LICENSE
                        Version 3, 29 June 2007
